      documented previously to round real and imaginary parts together on
      purpose, producing nicer looking output.  As mentioned, e.g. in the
      PR, this change is compatible to many other \dQuote{\R-like}
      programming environments.

      We have simplified the internal code and now basically format the
      real and imaginary parts independently of each other.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System valgrind headers are required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.

      \item Environment variable \env{R_SYSTEM_ABI} is no longer used and
      so no longer recorded in \file{etc/Renviron} (it was not on Windows
      and was only ever used when preparing package \pkg{tools}).

      \item There is an experimental \command{configure} option
      \option{--with-libdeflate-compression} which uses
      \code{libdeflate} rather than \code{libz} to (de)compress \R
      objects in lazy-load databases, if the \code{libdeflate} library
      and headers are available.  Typically tasks spend up to 5\% of
      their time on such operations, although creating lazy-data
      databases is one of the exceptions.

      \emph{pro tem} this can also be selected by setting environment
      variable \env{R_USE_LIBDEFLATE_FOR_LAZYLOAD} to \code{yes}.

      \item \command{configure} \option{--enable-lto=check} has not
      worked reliably since 2019 and has been removed.
    }
  }

  \subsection{INSTALLATION on macOS}{
    \itemize{
      \item A new \command{configure} option \option{--with-newAccelerate}
      makes use of Apple's \sQuote{new} BLAS / LAPACK interfaces in their
      Accelerate framework.  Those interfaces are only available in macOS